solved serialization error